# diff-wos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  environment.yml
ablations/: test_clover.py  test_disk.py
diff_solve/: runner.py  test_bunny.py  test_teapot.py  test_wrench.py
include/: binding.h  fwd.cuh  fwd.h  primitive.cuh  sampler.cuh  sampler2.cuh  scene.cuh  solver.cuh  tabulated_G_cdf.cuh  util.cuh  wos.cuh
inv_solve/: optimize.py  test_bunny.py  test_wrench.py
src/: CMakeLists.txt
src/cuda/: CMakeLists.txt  main.cu
src/python/: CMakeLists.txt  __init__.py  main.cpp  scene.cu  test.cpp  wos.cu
wos/: fwd.py  greensfn.py  io.py  scene.py  scene3d.py  solver.py  stats.py  tools.py  utils.py  wos.py  wos3d.py  wos_boundary.py  wos_grad.py  wos_grad_3d.py  wos_with_source.py
